--- a/css/app.css
+++ b/css/app.css
@@ -24,9 +24,11 @@ nav {
 
 .logo {
       float: left;
+      position: fixed;
       padding: 8px;
       margin-left: 16px;
       margin-top: 8px;
+      transition: .5s;
 }
 
 /* title text change */
@@ -38,6 +40,12 @@ nav {
       font-size: 24px;
       letter-spacing: 0px;
       text-decoration: none;
+}
+
+.nav-wrapper {
+    position: fixed;
+    right: 0;
+    transition: .5s;
 }
 
 nav ul {
@@ -201,6 +209,29 @@ nav ul li a {
 .hidden {
       display: none;
 }
+
+section {
+    width: 100%;
+    height: 200vh;
+}
+
+/* #editor p{
+    color: #808080;
+    font-family: Poppins, sans-serif;
+    font-size: 15px;
+}
+
+#editor p::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.75);
+}
+
+#editor p::-moz-input-placeholder {
+    color: rgba(255, 255, 255, 0.75);
+}
+
+#editor p::-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.75);
+} */
 
 /* div#overlay{
     position: fixed;
