--- a/css/app.css
+++ b/css/app.css
@@ -48,6 +48,23 @@ nav {
     transition: .5s;
 }
 
+body header {
+    width:100%;
+    height:500px;
+        /* IE10 Consumer Preview */
+    background-image: -ms-linear-gradient(bottom, #fff 0%, #808181 100%);
+        /* Mozilla Firefox */
+    background-image: -moz-linear-gradient(bottom, #fff 0%, #808181 100%);
+        /* Opera */
+    background-image: -o-linear-gradient(bottom, #fff 0%, #808181 100%);
+        /* Webkit (Safari/Chrome 10) */
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #fff), color-stop(1, #808181));
+        /* Webkit (Chrome 11+) */
+    background-image: -webkit-linear-gradient(bottom, #fff 0%, #808181 100%);
+        /* W3C Markup, IE10 Release Preview */
+    background-image: linear-gradient(to top, #fff 0%, #808181 100%);
+}
+
 nav ul {
       float: right;
 }
@@ -220,61 +237,3 @@ section {
     font-family: Poppins, sans-serif;
     font-size: 15px;
 }
-
-#editor p::-webkit-input-placeholder {
-    color: rgba(255, 255, 255, 0.75);
-}
-
-#editor p::-moz-input-placeholder {
-    color: rgba(255, 255, 255, 0.75);
-}
-
-#editor p::-ms-input-placeholder {
-    color: rgba(255, 255, 255, 0.75);
-} */
-
-/* div#overlay{
-    position: fixed;
-    width: 100%;
-    height: 12%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.1);
-    z-index: 2;
-    cursor: pointer;
-}
-
-div#text {
-    position: absolute;
-    top: 50%;
-    left: 200px;
-    font-size: 30px;
-    font-family: 'Lalezar';
-    color: #1a0500;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
-.topnav {
-    background-color: rgba(0, 0, 0, 0.1);
-    padding-right: 5%;
-
-}
-
-.topnav a {
-    float: right;
-    top: 50%;
-    color: black;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnav a:hover{
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #1a0500;
-} */
