--- a/css/app.css
+++ b/css/app.css
@@ -117,7 +117,6 @@ nav ul li a {
 
 .cardX {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
     text-align: center;
     background-color: #e6e6e6;
     border-top-left-radius: 5px;
@@ -125,6 +124,17 @@ nav ul li a {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     height: 300px;
+}
+
+.top-right {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+}
+.textarea p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
 }
 
 @media screen and (max-width: 864px) {
