--- a/css/app.css
+++ b/css/app.css
@@ -39,6 +39,7 @@ nav {
       font-family: 'Poppins', sans-serif;
       font-size: 24px;
       letter-spacing: 0px;
+      padding-right: 70px;
       text-decoration: none;
       word-wrap: break-word;
 }
