--- a/css/app.css
+++ b/css/app.css
@@ -16,6 +16,7 @@ body {
       font-weight: 400;
       background-position: center;
       background-size: cover;
+      -webkit-text-size-adjust: none;
 }
 
 nav {
@@ -39,7 +40,7 @@ nav {
       font-family: 'Poppins', sans-serif;
       font-size: 24px;
       letter-spacing: 0px;
-      padding-right: 70px;
+      padding-right: 600px;
       text-decoration: none;
       word-wrap: break-word;
 }
@@ -89,8 +90,15 @@ nav ul li a {
     margin: 0 -5px;
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 80px;
-    width: 60%;
+    padding-top: 50px;
+    width: 70%;
+}
+
+.rowO {
+    margin: 0 -5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 10px;
 }
 
 .rowX {
@@ -104,6 +112,28 @@ nav ul li a {
     content: "";
     display: table;
     clear: both;
+}
+
+.cardB {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: rgba(255,223,28);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 80%;
+}
+
+.cardB p {
+    text-align: Left;
+    padding-top: 5px;
+    text-indent: 10px;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    text-transform: uppercase;
+    vertical-align: center;
+    word-wrap: break-word;
 }
 
 .cardX {
@@ -120,7 +150,7 @@ nav ul li a {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
     text-align: center;
-    background-color: #e6e6e6;
+    background-color: rgba(255,223,28);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -132,10 +162,33 @@ nav ul li a {
             padding: 0;
       }
 
-      .column {
-          width: 100%;
-          display: block;
-          margin-bottom: 20px;
+      .logo a {
+          padding-right: 70px;
+      }
+
+      .row {
+          margin: 0 -5px;
+          padding-left: 10%;
+          padding-right: 10%;
+          padding-top: 100px;
+          width: 83%;
+      }
+
+      .rowO {
+          margin: 0 -5px;
+          padding-left: 10%;
+          padding-right: 10%;
+          padding-top: 80px;
+      }
+
+      .cardB {
+          width: inherit;
+          height: inherit;
+      }
+
+      .cardB p {
+          text-align: center;
+          padding: 10px;
       }
 
       .nav-wrapper {
@@ -269,10 +322,4 @@ nav ul li a {
 section {
     width: 100%;
     height: 200vh;
-}
-
-/* #editor p{
-    color: #808080;
-    font-family: Poppins, sans-serif;
-    font-size: 15px;
 }
