--- a/css/app.css
+++ b/css/app.css
@@ -179,9 +179,10 @@ nav ul li a {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     width: 93%;
+    height: 200px;
 }
 
-.subCard p {
+.subCard h4 {
     text-align: center;
     padding-top: 5px;
     padding-left: 5px;
@@ -245,7 +246,7 @@ nav ul li a {
 
 .column {
     float: left;
-    width: 20%;
+    width: 41.5%;
     padding: 0 10px 0 0;
 }
 
@@ -284,7 +285,7 @@ nav ul li a {
       }
 
       .subCard {
-          height: inherit;
+          height: 200px;
           width: inherit;
       }
 
