--- a/css/app.css
+++ b/css/app.css
@@ -86,31 +86,6 @@ nav ul li a {
     font-weight: bold;
 }
 
-.row {
-    margin: 0 -5px;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 50px;
-    width: 70%;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    background-color: rgba(255,223,28);
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.row::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
 .rowX {
     margin: 0 -5px;
     padding-left: 10%;
@@ -158,33 +133,43 @@ nav ul li a {
     word-wrap: break-word;
 }
 
-.rowK {
-    margin: 0 -5px;
+/* Testing Grid Layout */
+.row {
+    box-sizing: border-box;
+    margin: 0 -14px;
     padding-left: 10%;
-    padding-right: 10%;
+    padding-right: 7.5%;
     padding-top: 10px;
+    padding-bottom: 10px;
     width: 100%;
 }
 
-.rowK::after {
+.row::after {
     content: "";
     display: table;
     clear: both;
 }
 
-.subCard {
+.column {
+    float: left;
+    width: 33.333333333333%;
+    padding: 0 10px;
+}
+
+.card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    width: 93%;
-    height: 200px;
+    width: 100%;
+    height: 300px;
 }
 
-.subCard h4 {
-    text-align: center;
-    padding-top: 5px;
+.card h4 {
+    font-size: 20px;
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
@@ -193,11 +178,10 @@ nav ul li a {
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
     vertical-align: center;
-    word-wrap: break-word;
 }
 
 #one {
-    background-color: #ef527f;
+    background-color: rgb(239, 82, 127);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -205,7 +189,7 @@ nav ul li a {
 }
 
 #two {
-    background-color: #1cc7d0;
+    background-color: rgb(28, 199, 208);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -213,7 +197,7 @@ nav ul li a {
 }
 
 #three {
-    background-color: #2dde98;
+    background-color: rgb(45, 222, 152);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -221,7 +205,7 @@ nav ul li a {
 }
 
 #four {
-    background-color: #ffc168;
+    background-color: rgb(255, 193, 104);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -229,7 +213,7 @@ nav ul li a {
 }
 
 #five {
-    background-color: #ff6c5f;
+    background-color: rgb(255, 108, 95);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -237,17 +221,11 @@ nav ul li a {
 }
 
 #six {
-    background-color: #b84592;
+    background-color: rgb(184, 69, 146);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-}
-
-.column {
-    float: left;
-    width: 41.5%;
-    padding: 0 10px 0 0;
 }
 
 @media screen and (max-width: 864px) {
@@ -259,18 +237,10 @@ nav ul li a {
           padding-right: 70px;
       }
 
-      .row {
-          margin: 0 -5px;
-          padding-left: 10%;
-          padding-right: 10%;
-          padding-top: 100px;
-          width: 83%;
-      }
-
       .rowO {
           margin: 0 -5px;
           padding-left: 10%;
-          padding-right: 10%;
+          padding-right: 10%%;
           padding-top: 10px;
       }
 
@@ -284,20 +254,14 @@ nav ul li a {
           padding: 10px;
       }
 
-      .subCard {
-          height: 200px;
-          width: inherit;
-      }
-
-      .subCard p {
-          text-align: center;
-          padding: 10px;
-      }
-
       .column {
-          width: 90.5%;
+          width: 107%;
           display: block;
           margin-bottom: 20px;
+      }
+
+      .card h4 {
+          word-wrap: break-word;
       }
 
       .nav-wrapper {
