--- a/css/app.css
+++ b/css/app.css
@@ -237,11 +237,29 @@ nav ul li a {
           padding-right: 70px;
       }
 
-      .rowO {
+      .columnx {
+          width: 106.5%;
+          display: block;
+          margin-bottom: 20px;
           margin: 0 -5px;
-          padding-left: 10%;
-          padding-right: 10%%;
+          padding-right: 4%;
+      }
+
+      .columnB {
+          width: 106.5%;
+          display: block;
+          margin-bottom: 20px;
+          margin: 0 -5px;
+          padding-right: 10%;
           padding-top: 10px;
+      }
+
+      .column {
+          width: 108.8%;
+          display: block;
+          margin-bottom: 20px;
+          padding-top: 10px;
+          margin-left: -2%;
       }
 
       .cardB {
@@ -252,12 +270,6 @@ nav ul li a {
       .cardB p {
           text-align: center;
           padding: 10px;
-      }
-
-      .column {
-          width: 107%;
-          display: block;
-          margin-bottom: 20px;
       }
 
       .card h4 {
