--- a/css/app.css
+++ b/css/app.css
@@ -40,7 +40,7 @@ nav {
       font-family: 'Poppins', sans-serif;
       font-size: 24px;
       letter-spacing: 0px;
-      padding-right: 600px;
+      padding-right: 650px;
       text-decoration: none;
       word-wrap: break-word;
 }
@@ -76,7 +76,7 @@ nav ul li a {
       text-transform: uppercase;
       text-decoration: none;
       font-size: 24px;
-      letter-spacing: 1.2px;
+      letter-spacing: 0px;
       font-weight: 600;
 }
 
@@ -172,12 +172,20 @@ nav ul li a {
     font-size: 20px;
     padding-left: 5px;
     padding-right: 5px;
-    padding-bottom: 5px;
     font-weight: 700;
     color: #fff;
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
     vertical-align: center;
+}
+
+#list-algebra {
+    list-style-type: none;
+    text-align: center;
+    padding-right: 38px;
+    color: #fff;
+    font-size: 18px;
+    margin-top: -2px;
 }
 
 #one {
@@ -226,6 +234,48 @@ nav ul li a {
     border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 15%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay-content ul li a {
+    color: #fff;
+    font-size: 30px;
+    font-family: 'Poppins', sans-serif;
+    display: block;
+    transition: 0.3s;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.overlay a{
+    color: #fff;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
 }
 
 @media screen and (max-width: 864px) {
