--- a/css/app.css
+++ b/css/app.css
@@ -253,18 +253,23 @@ nav ul li a {
     position: relative;
     top: 15%;
     width: 100%;
-    text-align: center;
-    margin-top: 30px;
+    text-align: left;
+    padding-left: 100px;
 }
 
 .overlay-content ul li a {
     color: #fff;
     font-size: 30px;
+    width: fit-content;
     font-family: 'Poppins', sans-serif;
     display: block;
     transition: 0.3s;
     text-decoration: none;
     padding: 10px;
+}
+
+#listS {
+    list-style-type: none;
 }
 
 .overlay a{
@@ -277,6 +282,32 @@ nav ul li a {
     right: 45px;
     font-size: 60px;
 }
+
+.rowOv {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.columnO {
+    float: left;
+    padding: 0 10px;
+    width: 50%;
+}
+
+.card-in {
+    background: rgba(0, 0, 0, 0.0);
+    width: 100%;
+    height: 100%;
+}
+
+.card-in h4 {
+    color: #fff;
+    font-size: 25px;
+    text-align: center;
+}
+
+.card-in span {visibility: hidden;}
+.topic-list ul li:nth-child(1) a:hover .card-in span {visibility: visible;}
 
 @media screen and (max-width: 864px) {
       .logo {
@@ -374,7 +405,7 @@ nav ul li a {
       }
 
       .nav-wrapper ul li a {
-            padding: 10px 90px;
+            padding: 10px 40px;
             opacity: 0;
             color: #000;
             font-size: 24px;
