--- a/css/app.css
+++ b/css/app.css
@@ -103,6 +103,67 @@ nav ul li a {
     height: 300px;
 }
 
+.cardX img {
+    object-fit:cover;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.cardX h4 {
+    position: absolute;
+    top: 150px;
+    right: 190px;
+    width: 50%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 35px;
+    color: #03363d;
+    text-align: right;
+    font-weight: 700;
+    text-decoration: none;
+    /* text-transform: uppercase; */
+    letter-spacing: 0px;
+}
+
+.cardX p {
+    position: absolute;
+    top: 200px;
+    right: 190px;
+    width: 50%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: #03363d;
+    text-align: right;
+    font-weight: 600;
+    text-decoration: none;
+    /* text-transform: uppercase; */
+    letter-spacing: 0px;
+}
+
+.cardX ul li {
+    position: absolute;
+    right: 190px;
+    width: 50%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: #03363d;
+    text-align: right;
+    font-weight: 400;
+    text-decoration: none;
+    list-style-type: none;
+    padding-top: 5px;
+    /* text-transform: uppercase; */
+    letter-spacing: 0px;
+}
+
+.cardX ul li:nth-child(1){top: 250px;}
+.cardX ul li:nth-child(2){top: 280px;}
+.cardX ul li:nth-child(3){top: 310px;}
+.cardX ul li:nth-child(4){top: 340px;}
+
 .rowO {
     margin: 0 -5px;
     padding-left: 10%;
