--- a/css/app.css
+++ b/css/app.css
@@ -32,7 +32,6 @@ nav {
       transition: .5s;
 }
 
-/* title text change */
 .logo a {
       color: #000;
       text-transform: uppercase;
@@ -68,7 +67,6 @@ nav ul li:last-child {
       margin-right: 24px;
 }
 
-/* nav text change */
 nav ul li a {
       display: inline-block;
       outline: none;
@@ -115,8 +113,8 @@ nav ul li a {
 
 .cardX h4 {
     position: absolute;
-    top: 150px;
-    right: 190px;
+    top: 22%;
+    right: 13.5%;
     width: 50%;
     font-family: 'Poppins', sans-serif;
     font-size: 35px;
@@ -130,8 +128,8 @@ nav ul li a {
 
 .cardX p {
     position: absolute;
-    top: 200px;
-    right: 190px;
+    top: 30%;
+    right: 13.5%;
     width: 50%;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
@@ -145,7 +143,7 @@ nav ul li a {
 
 .cardX ul li {
     position: absolute;
-    right: 190px;
+    right: 13.5%;
     width: 50%;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
@@ -154,15 +152,14 @@ nav ul li a {
     font-weight: 400;
     text-decoration: none;
     list-style-type: none;
-    padding-top: 5px;
-    /* text-transform: uppercase; */
+    padding-top: 25px;
     letter-spacing: 0px;
 }
 
-.cardX ul li:nth-child(1){top: 250px;}
-.cardX ul li:nth-child(2){top: 280px;}
-.cardX ul li:nth-child(3){top: 310px;}
-.cardX ul li:nth-child(4){top: 340px;}
+.cardX ul li:nth-child(1){top: 36%;}
+.cardX ul li:nth-child(2){top: 41%;}
+.cardX ul li:nth-child(3){top: 46%;}
+.cardX ul li:nth-child(4){top: 51%;}
 
 .rowO {
     margin: 0 -5px;
@@ -245,7 +242,7 @@ nav ul li a {
     text-align: center;
     padding-right: 38px;
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
     margin-top: -2px;
 }
 
@@ -326,7 +323,7 @@ nav ul li a {
     display: block;
     transition: 0.3s;
     text-decoration: none;
-    padding: 10px;
+    padding: 8px;
 }
 
 #listS {
@@ -366,9 +363,6 @@ nav ul li a {
     font-size: 25px;
     text-align: center;
 }
-
-.card-in span {visibility: hidden;}
-.topic-list ul li:nth-child(1) a:hover .card-in span {visibility: visible;}
 
 @media screen and (max-width: 864px) {
       .logo {
@@ -417,6 +411,14 @@ nav ul li a {
       .card h4 {
           word-wrap: break-word;
       }
+
+      .cardX h4 {font-size: 20px;}
+      .cardX p {font-size: 13px; top: 31%;}
+      .cardX ul li {font-size: 12px;}
+      .cardX ul li:first-child {padding-top: 25px;}
+      .cardX ul li:nth-child(2) {top: 42.5%;}
+      .cardX ul li:nth-child(3) {top: 46.5%;}
+      .cardX ul li:nth-child(4) {top: 50.5%;}
 
       .nav-wrapper {
             position: fixed;
